# TableKM

./: .gitignore  AboutUs.cpp  AboutUs.hpp  AboutUs.ui  CMakeLists.txt  CreateTableDialog.cpp  CreateTableDialog.hpp  DockWidget.hpp  HelpPage.hpp  K2QtTableModel.cpp  K2QtTableModel.hpp  KErrorToHtml.hpp  KPairedLineEdit.hpp  KmtFuncPopupEditor.cpp  KmtFuncPopupEditor.hpp  LineEdit.cpp  LineEdit.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  OpenTableDialog.cpp  OpenTableDialog.hpp  ProjectView.cpp  ProjectView.hpp  QueryDialog.hpp  README.md  SyntaxHighlighter.hpp  TableInfoDialog.hpp  TableKM.pro  TableView.cpp  TableView.hpp  ViewDialog.cpp  ViewDialog.hpp  WelcomePage.cpp  WelcomePage.hpp  config.h.in  debuggingstylesheet.txt  docs.qrc  main.cpp  resource.qrc
datafmts/: CMakeLists.txt  CellStyler.cpp  ColorUtilities.cpp  CommonDataFormats.cpp
delegates/: DateDelegate.cpp  DateTimeDelegate.cpp  DateTimeDelegate.hpp  Delegates.hpp
docs/: info-view.html  logical-function.html  string-function.html  style.css
manipulator/: AddColumnWidget.cpp  AddColumnWidget.hpp  AddColumnWidget.ui  AddRowWidget.cpp  AddRowWidget.hpp  AddRowWidget.ui  AutoValueGeneratorSettingsWindow.cpp  AutoValueGeneratorSettingsWindow.hpp  AutoValueGeneratorSettingsWindow.ui  DataEvaluator.cpp  DataEvaluator.hpp  DropRowWidget.ui  TransformColumnWidget.cpp  TransformColumnWidget.hpp  TransformColumnWidget.ui
misc/: MiscFunctions_.hpp  ValidatorFactory.cpp  ValidatorFactory.hpp
rwview/: CMakeLists.txt  Kmx.hpp  KmxHelper.cpp  TablePreview.cpp  ViewReadWrite.cpp  ViewReadWrite.hpp
src/: AboutUs.cpp  AboutUs.hpp  AboutUs.ui  CMakeLists.txt  CreateTableDialog.cpp  CreateTableDialog.hpp  CreateViewDialog.cpp  CreateViewDialog.hpp  CreateViewDialog.ui  CustomErrMsgBox.cpp  CustomErrMsgBox.hpp  CustomStylesheet.qss  DockWidget.cpp  DockWidget.hpp  DummyBasicView.cpp  DummyBasicView.hpp  HelpPage.cpp  HelpPage.ui  IconProvider.cpp  IconProvider.hpp  K2QtTableModel.cpp  K2QtTableModel.hpp  KPairedLineEdit.cpp  KPairedLineEdit.hpp  KmtFuncPopupEditor.cpp  KmtFuncPopupEditor.hpp  LineEdit.cpp  LineEdit.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  OpenTableDialog.cpp  OpenTableDialog.hpp  OpenTableDialog.ui  ProjectView.cpp  ProjectView.hpp  QueryDialog.cpp  QueryDialog.hpp  QueryDialog.ui  SyntaxHighlighter.cpp  (+15 more)
src/datafmts/: CellStyler.hpp  ColorUtilities.hpp  CommonDataFormats.hpp  StandardStylers.cpp  StandardStylers.hpp
src/delegates/: CMakeLists.txt  DateDelegate.hpp  NumericalDelegate.cpp  NumericalDelegate.hpp
src/docs/: arithmetic-function.html  comparison-function.html  date-function.html  index.html  logical-function.html  string-function.html  style.css  type-conversion-function.html
src/docs/welcome/: welcome.html
src/manipulator/: AddColumnWidget.cpp  AddRowWidget.cpp  AddRowWidget.hpp  AddRowWidget.ui  AutoValueGeneratorSettingsWindow.cpp  AutoValueGeneratorSettingsWindow.hpp  AutoValueGeneratorSettingsWindow.ui  CMakeLists.txt  DataEvaluator.cpp  DropRowWidget.cpp  DropRowWidget.hpp  ManipulatorHelperFncs_.cpp  ManipulatorHelperFncs_.hpp  TableManipulator.cpp  TableManipulator.hpp  TableManipulator.ui  TransformColumnWidget.cpp
src/misc/: CMakeLists.txt  KDefines.h  MiscFunctions_.cpp  MiscFunctions_.hpp  SwitchLogHandlerHelper_.hpp
src/rwview/: Kmx.cpp  TablePreview.hpp
themes/dark/: DarkBlue.qss  DarkGreen.qss  DarkMaroon.qss  DarkPurple.qss  external_theme.qrc
